finished auth endpoints
