# server/chat-it/api/controllers/chat-it.js
@@ -10,7 +10,8 @@
 
   It is a good idea to list the modules that your application depends on in the package.json in the project root
  */
-const Itin = require('../../db/db');
+const Itin = require('../../db/db').Itin;
+const User = require('../../db/db').User;
 const wrap = require('express-async-wrap');
 
 /*
@@ -33,7 +34,9 @@ const wrap = require('express-async-wrap');
   Param 1: a handle to the request object
   Param 2: a handle to the response object
  */
-let postItinerary = wrap(async function postItinerary(req, res) {
+
+
+const postItinerary = wrap(async function postItinerary(req, res) {
 	// variables defined in the Swagger document can be referenced using req.swagger.params.{parameter_name}
 
 	const data = req.swagger.params.data.value;
@@ -42,7 +45,7 @@ let postItinerary = wrap(async function postItinerary(req, res) {
 		await Itin.add(data);
 		let result = await Itin.get();
 		console.log(result[0]);
-		console.log(result[0].data[0])
+		console.log(result[0].data[0]);
 		res.json();
 	} catch (e) {
 		console.log(e);
@@ -50,6 +53,59 @@ let postItinerary = wrap(async function postItinerary(req, res) {
 	// this sends back a JSON response which is a single string
 });
 
+const register = wrap(async function register(req, res) {
+	if (req.cookies.username) {
+		return res.status(404).json({
+			message: 'Already logged in!'
+		});
+	}
+
+	const data = req.swagger.params.registerData.value;
+
+	let invalid = await User.add(data);
+	if (!invalid) {
+		res.cookie('username', data.username);
+		return res.json({
+			message: 'User successfully registered',
+			username: data.username
+		});
+	} else {
+		return res.status(404).json({
+			message: invalid,
+		});
+	}
+});
+
+const login = wrap(async function login(req, res) {
+	if (req.cookies.username) {
+		return res.status(404).json({
+			message: 'Already logged in!'
+		});
+	}
+	const data = req.swagger.params.loginData.value;
+
+	if (!await User.login(data)) {
+		return res.status(404).json({
+			message: 'Invalid login credentials'
+		});
+	}
+
+	res.cookie('username', data.username);
+	return res.json({
+		message: 'User successfully logged in',
+		username: data.username
+	});
+});
+
+const logout = wrap(function logout(req, res) {
+	res.cookie('username', '');
+	return res.json({
+		message: 'User successfully logged out'
+	});
+});
 module.exports = {
-	postItinerary
+	postItinerary,
+	register,
+	login,
+	logout,
 };
